[tool.poetry]
name = "oz-defender"
version = "0.1.0"
description = ""
authors = ["Franklin <contact@hellofranklin.co>"]
readme = "README.md"
packages = [{include = "oz-defender"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
