[tool.poetry]
name = "oz-defender"
version = "0.1.0"
description = ""
authors = ["Shaan Savarirayan <shaan.savarirayan@gmail.com>"]
readme = "README.md"
packages = [{include = "oz_defender"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
